--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="page-header">
       <div class="container">
-        0978969021
+        Портфоліо Junior верстальщика
       </div>
     </header>
 
@@ -26,19 +26,19 @@
 
     <section class="intro">
       <div class="container">
-        <h2 class="subheading">Давайте познакомимся</h2>
-        <h3>Пара слов о себе</h3>
+        <h2 class="subheading">Давайте познайомимось</h2>
+        <h3>Декілька слів про себе</h3>
         <p>ЗБС пацан</p>
-        <h3>Чем могу быть полезен</h3>
+        <h3>Чим можу бути корисний</h3>
         <p>Буду їбашити як дикий</p>
       </div>
     </section>
 
     <section class="portfolio">
       <div class="container">
-        <h2 class="subheading">Мои работы</h2>
+        <h2 class="subheading">Мої проекти</h2>
 
-        <h3>Сайт инструктора Кекса</h3>
+        <h3>Сайт інструктора Кекса</h3>
         <p>Небольшой лендинг о школе для начинающих.</p>
 
         <h3>Блог начинающего верстальщика</h3>
