--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <header class="page-header">
       <div class="container">
         Портфоліо Junior верстальщика
+        <a class="header-email" href="mailto:maxbida@ukr.net"
+          >maxbida@ukr.net</a
+        >
+        <a class="header-phone" href="tel:+380978969021">+380978969021</a>
       </div>
     </header>
 
@@ -27,6 +31,9 @@
     <section class="intro">
       <div class="container">
         <h2 class="subheading">Давайте познайомимось</h2>
+        <figure class="user-image">
+          <img src="files/user.jpg" width="500" alt="Фото Макса Біди" />
+        </figure>
         <h3>Декілька слів про себе</h3>
         <p>ЗБС пацан</p>
         <h3>Чим можу бути корисний</h3>
@@ -37,17 +44,29 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мої проекти</h2>
-
+        <figure class="project-image">
+          <img
+            src="files/project1.jpg"
+            width="928"
+            height="536"
+            alt="Cайт инструктора Кекса"
+          />
+        </figure>
         <h3>Сайт інструктора Кекса</h3>
         <p>Небольшой лендинг о школе для начинающих.</p>
-
+        <a class="button" href="source/project1/index.html">Відкрити сайт</a>
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
+        <a class="button" href="source/project2/index.html">Відкрити сайт</a>
       </div>
     </section>
 
     <footer class="page-footer">
       <div class="container">
+        <a class="footer-email" href="mailto:maxbida@ukr.net"
+          >maxbida@ukr.net</a
+        >
+        <a class="footer-phone" href="tel:+380978969021">+380978969021</a>
         <address>Україна, Київ</address>
       </div>
     </footer>
