--- a/index.html
+++ b/index.html
@@ -34,10 +34,23 @@
         <figure class="user-image">
           <img src="files/user.jpg" width="500" alt="Фото Макса Біди" />
         </figure>
-        <h3>Декілька слів про себе</h3>
-        <p>ЗБС пацан</p>
-        <h3>Чим можу бути корисний</h3>
-        <p>Буду їбашити як дикий</p>
+        <div>
+          <h3>Декілька слів про себе</h3>
+          <p>ЗБС пацан</p>
+        </div>
+        <div>
+          <h3>Чим можу бути корисний</h3>
+          <p>Буду їбашити як дикий</p>
+        </div>
+        <div class="skills">
+          <h3>Мої навики</h3>
+          <dl class="skills-list">
+            <dt class="skill-html">HTML</dt>
+            <dd class="level"><div style="width: 60%;">60%</div></dd>
+            <dt class="skill-css">CSS</dt>
+            <div class="level"><div style="width: 40%;">40%</div></div>
+          </dl>
+        </div>
       </div>
     </section>
 
@@ -54,10 +67,24 @@
         </figure>
         <h3>Сайт інструктора Кекса</h3>
         <p>Небольшой лендинг о школе для начинающих.</p>
-        <a class="button" href="source/project1/index.html">Відкрити сайт</a>
+        <a class="button" href="source/project1/index.html" target="_blank"
+          >Відкрити сайт</a
+        >
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
-        <a class="button" href="source/project2/index.html">Відкрити сайт</a>
+        <a class="button" href="source/project2/index.html" target="_blank"
+          >Відкрити сайт</a
+        >
+        <h3>Сайт про дороги</h3>
+        <p>Мій перший сайт</p>
+        <a class="button" href="source/WWW_roads/HTML_1.html" target="_blank"
+          >Відкрити сайт</a
+        >
+        <h3>Smart</h3>
+        <p>Мій другий сайт</p>
+        <a class="button" href="source/Smart/Smart_1.html" target="_blank"
+          >Відкрити сайт</a
+        >
       </div>
     </section>
 
