--- a/index.html
+++ b/index.html
@@ -57,31 +57,36 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мої проекти</h2>
-        <figure class="project-image">
-          <img
-            src="files/project1.jpg"
-            width="928"
-            height="536"
-            alt="Cайт инструктора Кекса"
-          />
-        </figure>
+
         <h3>Сайт інструктора Кекса</h3>
         <p>Небольшой лендинг о школе для начинающих.</p>
+        <figure class="project-image">
+          <img src="files/project1.jpg" alt="Cайт инструктора Кекса" />
+        </figure>
         <a class="button" href="source/project1/index.html" target="_blank"
           >Відкрити сайт</a
         >
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
+        <figure class="project-image">
+          <img src="files/project2.png" alt="Блог начинающего верстальщика" />
+        </figure>
         <a class="button" href="source/project2/index.html" target="_blank"
           >Відкрити сайт</a
         >
         <h3>Сайт про дороги</h3>
         <p>Мій перший сайт</p>
+        <figure class="project-image">
+          <img src="files/WWW_roads.png" alt="Сайт про дороги" />
+        </figure>
         <a class="button" href="source/WWW_roads/HTML_1.html" target="_blank"
           >Відкрити сайт</a
         >
         <h3>Smart</h3>
         <p>Мій другий сайт</p>
+        <figure class="project-image">
+          <img src="files/Smart.png" alt="Smart" />
+        </figure>
         <a class="button" href="source/Smart/Smart_1.html" target="_blank"
           >Відкрити сайт</a
         >
