--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
         <div>
           <h3>Декілька слів про себе</h3>
           <p>ЗБС пацан</p>
+          <p>Бігаю, катаюсь на велосипеді</p>
+          <iframe
+            height="454"
+            width="340"
+            frameborder="0"
+            allowtransparency="true"
+            scrolling="no"
+            src="https://www.strava.com/athletes/43960072/latest-rides/d320a4ff25e7aad71133aa7d39e29958bdba04cf"
+          ></iframe>
         </div>
         <div>
           <h3>Чим можу бути корисний</h3>
