--- a/index.html
+++ b/index.html
@@ -34,20 +34,29 @@
         <figure class="user-image">
           <img src="files/user.jpg" width="500" alt="Фото Макса Біди" />
         </figure>
-        <div>
+        <div class="about_myself">
           <h3>Декілька слів про себе</h3>
-          <p>ЗБС пацан</p>
-          <p>Бігаю, катаюсь на велосипеді</p>
-          <iframe
+          <div class="about_myself_text">
+            <p>ЗБС пацан
+              ЗБС пацан ЗБС пацан ЗБС пацан
+              ЗБС пацан ЗБС пацан
+              ЗБС пацан ЗБС пацан ЗБС пацан
+            </p>
+          </div>
+           <div class="hobby">
+           <p>Бігаю, катаюсь на велосипеді
+              Мій профіль на Strava</p>
+           <iframe
             height="454"
             width="340"
             frameborder="0"
             allowtransparency="true"
             scrolling="no"
             src="https://www.strava.com/athletes/43960072/latest-rides/d320a4ff25e7aad71133aa7d39e29958bdba04cf"
-          ></iframe>
+           ></iframe>
+           </div>
         </div>
-        <div>
+        <div class="useful">
           <h3>Чим можу бути корисний</h3>
           <p>Буду їбашити як дикий</p>
         </div>
@@ -67,22 +76,6 @@
       <div class="container">
         <h2 class="subheading">Мої проекти</h2>
 
-        <h3>Сайт інструктора Кекса</h3>
-        <p>Небольшой лендинг о школе для начинающих.</p>
-        <figure class="project-image">
-          <img src="files/project1.jpg" alt="Cайт инструктора Кекса" />
-        </figure>
-        <a class="button" href="source/project1/index.html" target="_blank"
-          >Відкрити сайт</a
-        >
-        <h3>Блог начинающего верстальщика</h3>
-        <p>Статический блог про обучение HTML и CSS.</p>
-        <figure class="project-image">
-          <img src="files/project2.png" alt="Блог начинающего верстальщика" />
-        </figure>
-        <a class="button" href="source/project2/index.html" target="_blank"
-          >Відкрити сайт</a
-        >
         <h3>Сайт про дороги</h3>
         <p>Мій перший сайт</p>
         <figure class="project-image">
@@ -99,6 +92,23 @@
         <a class="button" href="source/Smart/Smart_1.html" target="_blank"
           >Відкрити сайт</a
         >
+        <h3>Сайт інструктора Кекса</h3>
+        <p>Небольшой лендинг о школе для начинающих.</p>
+        <figure class="project-image">
+          <img src="files/project1.jpg" alt="Cайт инструктора Кекса" />
+        </figure>
+        <a class="button" href="source/project1/index.html" target="_blank"
+          >Відкрити сайт</a
+        >
+        <h3>Блог начинающего верстальщика</h3>
+        <p>Статический блог про обучение HTML и CSS.</p>
+        <figure class="project-image">
+          <img src="files/project2.png" alt="Блог начинающего верстальщика" />
+        </figure>
+        <a class="button" href="source/project2/index.html" target="_blank"
+          >Відкрити сайт</a
+        >
+        
       </div>
     </section>
 
