--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic"
       rel="stylesheet"
     />
+    <link rel="icon" href="img/2019-08-25.jpg" />
     <title>Портфоліо Junior верстальщика</title>
   </head>
 
@@ -37,24 +38,22 @@
         <div class="about_myself">
           <h3>Декілька слів про себе</h3>
           <div class="about_myself_text">
-            <p>ЗБС пацан
-              ЗБС пацан ЗБС пацан ЗБС пацан
-              ЗБС пацан ЗБС пацан
-              ЗБС пацан ЗБС пацан ЗБС пацан
+            <p>
+              ЗБС пацан ЗБС пацан ЗБС пацан ЗБС пацан ЗБС пацан ЗБС пацан ЗБС
+              пацан ЗБС пацан ЗБС пацан
             </p>
           </div>
-           <div class="hobby">
-           <p>Бігаю, катаюсь на велосипеді
-              Мій профіль на Strava</p>
-           <iframe
-            height="454"
-            width="340"
-            frameborder="0"
-            allowtransparency="true"
-            scrolling="no"
-            src="https://www.strava.com/athletes/43960072/latest-rides/d320a4ff25e7aad71133aa7d39e29958bdba04cf"
-           ></iframe>
-           </div>
+          <div class="hobby">
+            <p>Бігаю, катаюсь на велосипеді Мій профіль на Strava</p>
+            <iframe
+              height="454"
+              width="340"
+              frameborder="0"
+              allowtransparency="true"
+              scrolling="no"
+              src="https://www.strava.com/athletes/43960072/latest-rides/d320a4ff25e7aad71133aa7d39e29958bdba04cf"
+            ></iframe>
+          </div>
         </div>
         <div class="useful">
           <h3>Чим можу бути корисний</h3>
@@ -108,7 +107,6 @@
         <a class="button" href="source/project2/index.html" target="_blank"
           >Відкрити сайт</a
         >
-        
       </div>
     </section>
 
